# p2c_mech

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmessage  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py
app/bot/: access.py  callbacks.py  preferences.py  router.py  runner.py  session_state.py  state.py
app/bot/handlers/: actions.py  admin.py  filters.py  limits.py  orders.py  panel.py  session.py
app/core/: config.py  crypto.py  fastjson.py  logging.py
app/repositories/: __init__.py  active_orders.py  admin_registry.py  agent_preferences.py  platform_session.py
app/services/: admin_access.py  agent_runtime_manager.py  p2c_events.py  p2c_live_agent.py  runtime_registry.py
app/workers/: browser.py  generate_session_key.py  p2c_socket.py
docs/: BROWSER_AUTOMATION_TOOLS_2026_RU.md  COMMIT_PATTERN_RU.md  CRITICAL_ANALYSIS_AND_E2E_RU.md  MULTITENANT_PROD_READY_RU.md  PROJECT_PATTERNS_RU.md  SEND_API_ANALYSIS_RU.md  SPRINT_0_KICKOFF_RU.md  SPRINT_1_REVERSE_ENGINEERING_RU.md  SPRINT_PLAN_AND_CHECKLISTS_RU.md  TELEGRAM_BOT_UX_RU.md  TZ_AGENT_ARCHITECTURE_RU.md
research/: local_connect_proxy.py
tests/: test_actions_handler.py  test_active_order_repository.py  test_admin_access.py  test_agent_preferences_repository.py  test_agent_runtime_manager.py  test_bot_state.py  test_callbacks.py  test_crypto.py  test_e2e_agent_flow.py  test_filters_handler.py  test_health.py  test_multitenant_flow.py  test_p2c_events.py  test_p2c_live_agent.py  test_p2c_payments_client.py  test_platform_session_repository.py  test_session_state.py
(+9 files in other folders)
