[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "settings-dep-cloude-agent"
version = "0.1.0"
description = "Automation agent platform skeleton"
readme = "docs/PROJECT_PATTERNS_RU.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.22.0,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "cryptography>=45.0.0,<47.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "h2>=4.1.0,<5.0.0",
  "httpx>=0.28.0,<1.0.0",
  "playwright>=1.55.0,<2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "redis>=6.0.0,<7.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "websockets>=16.0,<17.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ASYNC",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
